compiler/java/gen/com/neb/NebParser.java
// Generated from /homes/bl2312/DSL/DSL/compiler/java/src/com/neb/Neb.g4 by ANTLR 4.5.1
package com.neb;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NebParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, ID=45, REAL=46, 
		INTEGER=47, WS=48;
	public static final int
		RULE_model = 0, RULE_variableSection = 1, RULE_initialisationSection = 2, 
		RULE_parameterSection = 3, RULE_indexSection = 4, RULE_randomSection = 5, 
		RULE_updateSection = 6, RULE_resultSection = 7, RULE_outputSection = 8, 
		RULE_payoffSection = 9, RULE_variableDeclaration = 10, RULE_stateInitialisation = 11, 
		RULE_modelParameter = 12, RULE_parameterValue = 13, RULE_indexSource = 14, 
		RULE_randomSource = 15, RULE_updateFunction = 16, RULE_outputFunction = 17, 
		RULE_payoffFunction = 18, RULE_indexRange = 19, RULE_randomRange = 20, 
		RULE_expr = 21, RULE_ternExpr = 22, RULE_lorExpr = 23, RULE_landExpr = 24, 
		RULE_equalityExpr = 25, RULE_relExpr = 26, RULE_addExpr = 27, RULE_mulExpr = 28, 
		RULE_powExpr = 29, RULE_unaryExpr = 30, RULE_atomExpr = 31, RULE_numberArray = 32, 
		RULE_integerArray = 33, RULE_integerElement = 34, RULE_realArray = 35, 
		RULE_realElement = 36, RULE_numberExpr = 37, RULE_mathFuncExpr = 38, RULE_mathUnaryExpr = 39, 
		RULE_mathBinaryExpr = 40, RULE_parenExpr = 41, RULE_indexedVariable = 42, 
		RULE_variableReference = 43, RULE_constantExpression = 44, RULE_mathUnaryFunc = 45, 
		RULE_mathBinaryFunc = 46, RULE_randomSet = 47, RULE_sensitivityFunction = 48;
	public static final String[] ruleNames = {
		"model", "variableSection", "initialisationSection", "parameterSection", 
		"indexSection", "randomSection", "updateSection", "resultSection", "outputSection", 
		"payoffSection", "variableDeclaration", "stateInitialisation", "modelParameter", 
		"parameterValue", "indexSource", "randomSource", "updateFunction", "outputFunction", 
		"payoffFunction", "indexRange", "randomRange", "expr", "ternExpr", "lorExpr", 
		"landExpr", "equalityExpr", "relExpr", "addExpr", "mulExpr", "powExpr", 
		"unaryExpr", "atomExpr", "numberArray", "integerArray", "integerElement", 
		"realArray", "realElement", "numberExpr", "mathFuncExpr", "mathUnaryExpr", 
		"mathBinaryExpr", "parenExpr", "indexedVariable", "variableReference", 
		"constantExpression", "mathUnaryFunc", "mathBinaryFunc", "randomSet", 
		"sensitivityFunction"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'% State Variables'", "'% State Initialisation'", "'% Model Parameters'", 
		"'% State Index'", "'% Random Source'", "'% State Update'", "'% Output'", 
		"'% Sensitivity'", "'% Payoff'", "'='", "'\\in'", "'\\sim'", "'['", "'..'", 
		"']'", "','", "'?'", "':'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'<='", 
		"'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'^'", "'!'", "'{'", "'}'", 
		"'('", "')'", "'_{'", "'\\sqrt'", "'\\exp'", "'\\max'", "'Z'", "'R'", 
		"'N'", "'\\frac'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "ID", "REAL", "INTEGER", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Neb.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NebParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ModelContext extends ParserRuleContext {
		public VariableSectionContext variableSection() {
			return getRuleContext(VariableSectionContext.class,0);
		}
		public InitialisationSectionContext initialisationSection() {
			return getRuleContext(InitialisationSectionContext.class,0);
		}
		public ParameterSectionContext parameterSection() {
			return getRuleContext(ParameterSectionContext.class,0);
		}
		public IndexSectionContext indexSection() {
			return getRuleContext(IndexSectionContext.class,0);
		}
		public RandomSectionContext randomSection() {
			return getRuleContext(RandomSectionContext.class,0);
		}
		public UpdateSectionContext updateSection() {
			return getRuleContext(UpdateSectionContext.class,0);
		}
		public ResultSectionContext resultSection() {
			return getRuleContext(ResultSectionContext.class,0);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).exitModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NebVisitor ) return ((NebVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			variableSection();
			setState(99);
			initialisationSection();
			setState(100);
			parameterSection();
			setState(101);
			indexSection();
			setState(102);
			randomSection();
			setState(103);
			updateSection();
			setState(104);
			resultSection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableSectionContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration;
		public List<VariableDeclarationContext> declarations = new ArrayList<VariableDeclarationContext>();
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public VariableSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).enterVariableSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).exitVariableSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NebVisitor ) return ((NebVisitor<? extends T>)visitor).visitVariableSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableSectionContext variableSection() throws RecognitionException {
		VariableSectionContext _localctx = new VariableSectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variableSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__0);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(107);
				((VariableSectionContext)_localctx).variableDeclaration = variableDeclaration();
				((VariableSectionContext)_localctx).declarations.add(((VariableSectionContext)_localctx).variableDeclaration);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitialisationSectionContext extends ParserRuleContext {
		public StateInitialisationContext stateInitialisation;
		public List<StateInitialisationContext> initialisations = new ArrayList<StateInitialisationContext>();
		public List<StateInitialisationContext> stateInitialisation() {
			return getRuleContexts(StateInitialisationContext.class);
		}
		public StateInitialisationContext stateInitialisation(int i) {
			return getRuleContext(StateInitialisationContext.class,i);
		}
		public InitialisationSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initialisationSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).enterInitialisationSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).exitInitialisationSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NebVisitor ) return ((NebVisitor<? extends T>)visitor).visitInitialisationSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitialisationSectionContext initialisationSection() throws RecognitionException {
		InitialisationSectionContext _localctx = new InitialisationSectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_initialisationSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(T__1);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(114);
				((InitialisationSectionContext)_localctx).stateInitialisation = stateInitialisation();
				((InitialisationSectionContext)_localctx).initialisations.add(((InitialisationSectionContext)_localctx).stateInitialisation);
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterSectionContext extends ParserRuleContext {
		public ModelParameterContext modelParameter;
		public List<ModelParameterContext> parameters = new ArrayList<ModelParameterContext>();
		public List<ModelParameterContext> modelParameter() {
			return getRuleContexts(ModelParameterContext.class);
		}
		public ModelParameterContext modelParameter(int i) {
			return getRuleContext(ModelParameterContext.class,i);
		}
		public ParameterSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).enterParameterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).exitParameterSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NebVisitor ) return ((NebVisitor<? extends T>)visitor).visitParameterSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterSectionContext parameterSection() throws RecognitionException {
		ParameterSectionContext _localctx = new ParameterSectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parameterSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__2);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(121);
				((ParameterSectionContext)_localctx).modelParameter = modelParameter();
				((ParameterSectionContext)_localctx).parameters.add(((ParameterSectionContext)_localctx).modelParameter);
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndexSectionContext extends ParserRuleContext {
		public IndexSourceContext indexSource;
		public List<IndexSourceContext> indexes = new ArrayList<IndexSourceContext>();
		public List<IndexSourceContext> indexSource() {
			return getRuleContexts(IndexSourceContext.class);
		}
		public IndexSourceContext indexSource(int i) {
			return getRuleContext(IndexSourceContext.class,i);
		}
		public IndexSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_indexSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).enterIndexSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).exitIndexSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NebVisitor ) return ((NebVisitor<? extends T>)visitor).visitIndexSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IndexSectionContext indexSection() throws RecognitionException {
		IndexSectionContext _localctx = new IndexSectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_indexSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__3);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(128);
				((IndexSectionContext)_localctx).indexSource = indexSource();
				((IndexSectionContext)_localctx).indexes.add(((IndexSectionContext)_localctx).indexSource);
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RandomSectionContext extends ParserRuleContext {
		public RandomSourceContext randomSource;
		public List<RandomSourceContext> randomSources = new ArrayList<RandomSourceContext>();
		public List<RandomSourceContext> randomSource() {
			return getRuleContexts(RandomSourceContext.class);
		}
		public RandomSourceContext randomSource(int i) {
			return getRuleContext(RandomSourceContext.class,i);
		}
		public RandomSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_randomSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).enterRandomSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).exitRandomSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NebVisitor ) return ((NebVisitor<? extends T>)visitor).visitRandomSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RandomSectionContext randomSection() throws RecognitionException {
		RandomSectionContext _localctx = new RandomSectionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_randomSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(T__4);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(135);
				((RandomSectionContext)_localctx).randomSource = randomSource();
				((RandomSectionContext)_localctx).randomSources.add(((RandomSectionContext)_localctx).randomSource);
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UpdateSectionContext extends ParserRuleContext {
		public UpdateFunctionContext updateFunction;
		public List<UpdateFunctionContext> updateFunctions = new ArrayList<UpdateFunctionContext>();
		public List<UpdateFunctionContext> updateFunction() {
			return getRuleContexts(UpdateFunctionContext.class);
		}
		public UpdateFunctionContext updateFunction(int i) {
			return getRuleContext(UpdateFunctionContext.class,i);
		}
		public UpdateSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_updateSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).enterUpdateSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).exitUpdateSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NebVisitor ) return ((NebVisitor<? extends T>)visitor).visitUpdateSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UpdateSectionContext updateSection() throws RecognitionException {
		UpdateSectionContext _localctx = new UpdateSectionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_updateSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__5);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(142);
				((UpdateSectionContext)_localctx).updateFunction = updateFunction();
				((UpdateSectionContext)_localctx).updateFunctions.add(((UpdateSectionContext)_localctx).updateFunction);
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResultSectionContext extends ParserRuleContext {
		public OutputSectionContext outputSection() {
			return getRuleContext(OutputSectionContext.class,0);
		}
		public PayoffSectionContext payoffSection() {
			return getRuleContext(PayoffSectionContext.class,0);
		}
		public ResultSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resultSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).enterResultSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).exitResultSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NebVisitor ) return ((NebVisitor<? extends T>)visitor).visitResultSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResultSectionContext resultSection() throws RecognitionException {
		ResultSectionContext _localctx = new ResultSectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_resultSection);
		try {
			setState(150);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				outputSection();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				payoffSection();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputSectionContext extends ParserRuleContext {
		public OutputFunctionContext outputFunction;
		public List<OutputFunctionContext> outputFunctions = new ArrayList<OutputFunctionContext>();
		public SensitivityFunctionContext sensitivityFunction() {
			return getRuleContext(SensitivityFunctionContext.class,0);
		}
		public List<OutputFunctionContext> outputFunction() {
			return getRuleContexts(OutputFunctionContext.class);
		}
		public OutputFunctionContext outputFunction(int i) {
			return getRuleContext(OutputFunctionContext.class,i);
		}
		public OutputSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).enterOutputSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).exitOutputSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NebVisitor ) return ((NebVisitor<? extends T>)visitor).visitOutputSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutputSectionContext outputSection() throws RecognitionException {
		OutputSectionContext _localctx = new OutputSectionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_outputSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(T__6);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(153);
				((OutputSectionContext)_localctx).outputFunction = outputFunction();
				((OutputSectionContext)_localctx).outputFunctions.add(((OutputSectionContext)_localctx).outputFunction);
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(161);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(159);
				match(T__7);
				setState(160);
				sensitivityFunction();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PayoffSectionContext extends ParserRuleContext {
		public PayoffFunctionContext payoffFunction() {
			return getRuleContext(PayoffFunctionContext.class,0);
		}
		public PayoffSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_payoffSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).enterPayoffSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).exitPayoffSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NebVisitor ) return ((NebVisitor<? extends T>)visitor).visitPayoffSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PayoffSectionContext payoffSection() throws RecognitionException {
		PayoffSectionContext _localctx = new PayoffSectionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_payoffSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(T__8);
			setState(164);
			payoffFunction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public Token name;
		public TerminalNode ID() { return getToken(NebParser.ID, 0); }
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).exitVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NebVisitor ) return ((NebVisitor<? extends T>)visitor).visitVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			((VariableDeclarationContext)_localctx).name = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateInitialisationContext extends ParserRuleContext {
		public IndexedVariableContext indexedState;
		public NumberExprContext value;
		public IndexedVariableContext indexedVariable() {
			return getRuleContext(IndexedVariableContext.class,0);
		}
		public NumberExprContext numberExpr() {
			return getRuleContext(NumberExprContext.class,0);
		}
		public StateInitialisationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateInitialisation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).enterStateInitialisation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).exitStateInitialisation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NebVisitor ) return ((NebVisitor<? extends T>)visitor).visitStateInitialisation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StateInitialisationContext stateInitialisation() throws RecognitionException {
		StateInitialisationContext _localctx = new StateInitialisationContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_stateInitialisation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			((StateInitialisationContext)_localctx).indexedState = indexedVariable();
			setState(169);
			match(T__9);
			setState(170);
			((StateInitialisationContext)_localctx).value = numberExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelParameterContext extends ParserRuleContext {
		public Token parameter;
		public ParameterValueContext value;
		public TerminalNode ID() { return getToken(NebParser.ID, 0); }
		public ParameterValueContext parameterValue() {
			return getRuleContext(ParameterValueContext.class,0);
		}
		public ModelParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).enterModelParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NebListener ) ((NebListener)listener).exitModelParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NebVisitor ) return ((NebVisitor<? extends T>)visitor).visitModelParameter(this);
			else return visitor.visitChildren(this);
		}
	}
